--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>SUDEEP G</h1>
+    <h1>SUDEEP G </h1>
     <p class="contact">
-      📧 sudeepg2345@gmail.com | 📞 +91 8281474245 | 🌐 https://sudeepg.info.gf/<br>
+      📧 sudeepg2345@gmail12.com | 📞 +91 8281474245 | 🌐 https://sudeepg.info.gf/<br>
       📍 Aroor, Kerala
     </p>
 
