--- a/index.html
+++ b/index.html
@@ -1,87 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SUDEEP G - Resume</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 40px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h1 {
-      margin-bottom: 5px;
-    }
-    .contact {
-      font-size: 0.9em;
-      color: #555;
-      margin-bottom: 30px;
-    }
-    h2 {
-      margin-top: 30px;
-      border-bottom: 2px solid #eee;
-      padding-bottom: 5px;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    .section {
-      margin-bottom: 30px;
-    }
-    p, li {
-      line-height: 1.6;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>SUDEEP G </h1>
-    <p class="contact">
-      📧 sudeepg2345@gmail12.com | 📞 +91 8281474245 | 🌐 https://sudeepg.info.gf/<br>
-      📍 Aroor, Kerala
-    </p>
-
-    <div class="section">
-      <h2>Professional Summary</h2>
-      <p>
-        Cloud and DevOps Engineer with 6+ years of IT experience specializing in AWS, automation, Linux administration, and CI/CD pipeline optimization. Strong background in cloud infrastructure, system security, and performance tuning.
-      </p>
-    </div>
-
-    <div class="section">
-      <h2>Skills</h2>
-      <ul>
-        <li>AWS, Azure, Linux Administration</li>
-        <li>Docker, Kubernetes, Terraform</li>
-        <li>Jenkins, GitHub, Shell Scripting</li>
-        <li>Monitoring (Prometheus, Grafana)</li>
-        <li>Automation, Security & Compliance</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Work Experience</h2>
-      <p><strong>Cloud Engineer</strong> – blueBriX, Kochi (2021–Present)</p>
-      <ul>
-        <li>Built and managed AWS infrastructure, automated deployments using Jenkins and Terraform.</li>
-        <li>Handled Linux administration and security configurations for cloud environments.</li>
-      </ul>
-
-      <p><strong>IT Administrator</strong> – XIME, Kochi (2018–2020)</p>
-      <ul>
-        <li>Maintained Windows/Linux servers and secured network infrastructure.</li>
-        <li>Provided tech support and managed IT assets and services.</li>
-      </ul>
-    </div>
-  </div>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Hello</title></head><body><h1>Work In Progress!</h1></body></html>
